# Reaper

./: .git-blame-ignore-revs  .gitignore  README.md  Spectre.py  config.toml  example.config.toml  pyproject.toml  updateSpectre.py
.github/: dependabot.yml
.github/workflows/: flake8.yml  format-check.yml  ruff.yml
cogs/: AllowedUsers.py  HelpCommand.py  LogReading.py  MasterCheck.py  ModSearch.py  PlaytesterPing.py
docs/: Commands-allowed-users-can-use.md  README.md  Setting-up-the-bot.md  commands-anyone-can-use.md  installation.md  replies.md
reaper/: Reaper.py  __init__.py  main.py
reaper/cogs/: AutoResponse.py  GlobalReplies.py  PlaytesterPing.py  __init__.py  allowed_channels.py  allowed_users.py  auto_react_reports.py  auto_response.py  doc_search.py  funny_replies.py  global_replies.py  image_response.py  install_channel_embed.py  log_reading.py  master_check.py  mod_search.py  playtester_ping.py  playtester_ping_proxy.py  playtester_ping_release_candidate.py  price_check.py  rules_writer.py  sentiment_analyzer.py  ticket_auto_response.py  user_replies.py
reaper/util/: JsonHandler.py  __init__.py  global_variables.py  json_handler.py  master_status.py
