[tool.poetry]
name = "reaper"
version = "0.1.0"
description = ""
authors = [
    "Gecko <gecko.eidechse+git@pm.me>",
    "Cyn <70904206+CooldudePUGS@users.noreply.github.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.5.2"
wheel = "^0.45.1"
beautifulsoup4 = "^4.13.3"
lxml = "^5.3.1"
pytesseract = "^0.3.13"
requests = "^2.32.3"
coloredlogs = "^15.0.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"


[tool.poetry.group.sentiment-analyzer.dependencies]
transformers = "^4.50.3"
torch = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
