[project]
name = "reaper"
version = "0.1.0"
description = ""
authors = [
    { name = "Gecko", email = "gecko.eidechse+git@pm.me" },
    { name = "Cyn", email = "70904206+CooldudePUGS@users.noreply.github.com" },
]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "discord-py>=2.5.2,<3",
    "wheel>=0.45.1,<0.46",
    "beautifulsoup4>=4.13.3,<5",
    "lxml>=5.3.2,<6",
    "pytesseract>=0.3.13,<0.4",
    "requests>=2.32.3,<3",
    "coloredlogs>=15.0.1,<16",
    "accelerate>=1.6.0,<2",
]

[dependency-groups]
dev = ["ruff>=0.11.5"]
sentiment-analyzer = [
    "transformers>=4.50.3,<5",
    "torch>=2.6.0,<3",
]

[tool.uv]
default-groups = [
    "dev",
    "sentiment-analyzer",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
